fix(forms): missing spaces, wrong colors, fix sizes

--- a/docs/css/form.css
+++ b/docs/css/form.css
@@ -18,6 +18,7 @@
 .form-field {
     background: none;
     color: inherit;
+    margin: 0 0 5px 0;
 }
 
 .form-field ::-webkit-input-placeholder,
@@ -62,16 +63,22 @@
     opacity: 0;
 }
 
+.label-radio {
+    margin: 0 0 5px 0;
+}
+
 .input-radio + .label-radio:before {
     content: '';
     display: inline-block;
     position: relative;
-    margin-right: 1em;
+    top: 3px;
+    box-sizing: border-box;
     width: var(--input-size);
     height: var(--input-size);
+    margin-right: 15px;
     background: transparent;
     border-radius: 100%;
-    border: 1px solid var(--color-second);
+    border: 2px solid var(--color-default);
     vertical-align: top;
     cursor: pointer;
     text-align: center;
@@ -82,7 +89,7 @@
     background-color: var(--color-first);
     border-color: var(--color-first);
 
-    box-shadow: inset 0 0 0 4px white;
+    box-shadow: inset 0 0 0 3px white;
 }
 
 .input-radio:focus + .label-radio:before {
