--- a/docs/css/variables.css
+++ b/docs/css/variables.css
@@ -11,7 +11,7 @@
 	--unit-gutter-l:	19px;
 
 	--navi-height: 		63px;
-	--input-size: 		1.4em;
+	--input-size: 		20px;
 
 	--page-size-l: 		998px;
 	--page-size-m: 		665px;
